Fix: maj ui swap for remove overflow on swap icon

--- a/app/views/level/_level.scss
+++ b/app/views/level/_level.scss
@@ -9,7 +9,8 @@
     .swap-languages {
       height: 90%;
 
-      md-icon {
+      .md-button.md-icon-button {
+        margin: 0;
         transform: rotate(90deg);
       }
     }
